[package]
name = "tw-id-num"
version = "0.1.2"
edition = "2021"
rust-version = "1.56"
repository = "https://github.com/magiclen/rust-tw-id-num"
homepage = "https://magiclen.org/tw-id-num"
keywords = ["taiwan"]
categories = ["no-std", "algorithms"]
description = "Check or generate Taiwan ID numbers."
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[dependencies]
rand = { version = "0.8.5", optional = true }

[features]
generate = ["rand"]

[package.metadata.docs.rs]
all-features = true
